# whisper-wish

./: .gitignore  CLAUDE.md  start.sh  whisper.sh
raycast/: subsforge-start.sh  subsforge-status.sh  subsforge-stop.sh  subsforge-translator.sh  whisper-dictate-en.sh  whisper-dictate.sh  whisper-server.sh  whisper-transcribe.sh
subsforge/: Cargo.toml  config.example.toml
subsforge/migrations/: 001_init.sql
subsforge/src/: config.rs  db.rs  error.rs  main.rs  models.rs  naming.rs
subsforge/src/api/: health.rs  jobs.rs  mod.rs
subsforge/src/pipeline/: ffmpeg.rs  mod.rs  srt.rs  translator.rs  whisper.rs
subsforge/src/watcher/: mod.rs  radarr.rs  sonarr.rs
subsforge/translator/: pyproject.toml  server.py
